<resources>
    <string name="app_name">Vocabulary quiz</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Name</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This name is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password or user is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_vocabulary">Vocabulary</string>
    <string name="action_settings">Settings</string>
    <string name="add">Add \nword</string>
    <string name="test">Test my\nskills</string>
    <string name="hello">Hi</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_newword_fragment">Insert the new word</string>
    <string name="spanishTitle">Spanish</string>
    <string name="frenchTitle">French</string>
    <string name="newSpaWord">Add Spanish Word:</string>
    <string name="newFreWord">Add French word:</string>
    <string name="chbAltWord">Add alternative translation</string>
    <string name="altFrenchTitle">Alternative French translation</string>
    <string name="altSpaTitle">Alternative Spanish translation</string>
    <string name="selectLesson">Select lesson</string>
    <string name="saveWord">Save</string>
    <string name="savedSuccess">Word saved successfully</string>
    <string name="emptyFields">Only alternative values can be empty</string>
    <string name="errorEmptyField">This field cannot be empty</string>
    <string name="error_word_not_saved">There was an error. Word cannot be saved</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_loading_word">I\'m sorry, the word can\'t be downloaded. Try again.</string>
    <string name="next">Next</string>
    <string name="hint">Hint</string>
    <string name="loading_word">Loading word…</string>
    <string name="unknown">Unknown</string>
    <string name="word_success">Correct!</string>
    <string name="word_error">Oh :( It\'s incorrect</string>
    <string name="check">Check</string>
</resources>
